--- a/index_style/style.css
+++ b/index_style/style.css
@@ -43,7 +43,7 @@ body, html {
     outline: none;
     float: left;
     padding: 0;
-    color: rgb(70, 70, 70);
+    color: white;
     font-size: 16px;
     transition: 0.4s;
     line-height: 40px;
@@ -88,7 +88,7 @@ input {
 
 ul#wrapper{
     list-style-type: none;
-            padding: 6;
+            padding: 0;
             margin-top: 10%;
             
 }
@@ -107,9 +107,8 @@ ul#wrapper{
 #wrapper a {
     border: 3px solid #66495c;
     border-radius: 15px;
-    margin-top: -9px;
-    margin-bottom: 11px;
-    background-color: #ffd8a6;
+    margin-top: 2px;
+    background-color: ffd8a6;
     padding: 10px;
     text-decoration: none;
     font-size: 16px;
